--- a/css/style.css
+++ b/css/style.css
@@ -176,13 +176,20 @@ h2:hover {
 
 
 .all_history img{
-	width: 45%;
-	float: left;
+	width: 80%;
 	padding: 0 20px 10px 0;
 }
 
+.dropcap{
+	color: #e63f3f;
+  float: left;
+  font-size: 70px;
+  line-height: 40px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
 
-
+}
 
 
 
