--- a/css/style.css
+++ b/css/style.css
@@ -174,10 +174,14 @@ h2:hover {
 	color: #e63f3f; 
 	}
 
+.all_history{
+	padding-right: 240px;
+}
 
-.all_history img{
-	width: 80%;
-	padding: 0 20px 10px 0;
+.caption img{
+	width: 35%;
+	padding: 0 0 10px 20px;
+	float: right;
 }
 
 .dropcap{
